# BankSearch

./: README.md
BankSearch/: README.md
BankSearch/backend/: .gitignore  db.sqlite3-journal
BankSearch/backend/api/: models.py  views.py
BankSearch/backend/api/migrations/: 0002_bank_address_bank_tel_branch_address_branch_tel_and_more.py
BankSearch/backend/bank/: serializers.py
BankSearch/backend/bank/migrations/: 0001_initial.py
BankSearch/backend/config/: settings.py  urls.py
BankSearch/frontend/src/: App.jsx
backend/: convert_csv_to_json.py  import_data.py  phone_utils.py  pyproject.toml  requirements.txt  vulture_report.txt
backend/bank/: bank_data.json  models.py  urls.py  views.py
backend/bank/migrations/: 0001_initial.py  0002_alter_bank_options_alter_branch_options_and_more.py  0002_bank_address_bank_tel_branch_address_branch_tel_and_more.py  0003_alter_bank_options_alter_branch_options.py  0004_alter_bank_name.py  0005_alter_bank_code_alter_bank_name_and_more.py  0005_alter_bank_name.py
backend/config/: settings.py  urls.py
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: BankBranchDetail.jsx  BankGetApi.jsx  BankMap.jsx  BankNameSection.jsx  BankingForm.jsx  BranchDetails.jsx  BranchNameSection.jsx  Header.jsx  NotFoundPage.jsx
frontend/src/contexts/: BankContext.jsx
