[tool.poetry]
name = "banksearch-backend"
version = "0.1.0"
description = ""
authors = ["Sean <seanchen1073@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django-cors-headers = "4.6.0"
djangorestframework = "3.15.2"
asgiref = "3.8.1"
django = "5.1"
phonenumbers = "8.13.45"
sqlparse = "0.5.1"
tzdata = "2024.1"


[tool.poetry.group.dev.dependencies]
vulture = "^2.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

